implemented persistent gui config

--- a/src/gui/NewDialog.ui
+++ b/src/gui/NewDialog.ui
@@ -113,14 +113,14 @@
         <item>
          <widget class="QLineEdit" name="widthLine">
           <property name="sizePolicy">
-           <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
           <property name="minimumSize">
            <size>
-            <width>64</width>
+            <width>80</width>
             <height>0</height>
            </size>
           </property>
@@ -183,7 +183,7 @@
           </property>
           <property name="minimumSize">
            <size>
-            <width>189</width>
+            <width>173</width>
             <height>0</height>
            </size>
           </property>
@@ -195,14 +195,14 @@
         <item>
          <widget class="QLineEdit" name="heightLine">
           <property name="sizePolicy">
-           <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+           <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
           <property name="minimumSize">
            <size>
-            <width>64</width>
+            <width>80</width>
             <height>0</height>
            </size>
           </property>
