--- a/src/gui/CtrlCut.ui
+++ b/src/gui/CtrlCut.ui
@@ -749,6 +749,9 @@
    <property name="text">
     <string>Quit</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+Q</string>
+   </property>
   </action>
  </widget>
  <customwidgets>
