--- a/src/gui/CtrlCut.ui
+++ b/src/gui/CtrlCut.ui
@@ -623,6 +623,9 @@
    <property name="text">
     <string>&amp;Move to origin</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+T</string>
+   </property>
   </action>
   <action name="helpAboutAction">
    <property name="text">
