--- a/src/gui/ImportDialog.ui
+++ b/src/gui/ImportDialog.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>ImportDialog</class>
  <widget class="QDialog" name="ImportDialog">
+  <property name="windowModality">
+   <enum>Qt::ApplicationModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -69,6 +72,9 @@
          <property name="text">
           <string>OK</string>
          </property>
+         <property name="default">
+          <bool>true</bool>
+         </property>
         </widget>
        </item>
        <item>
@@ -76,8 +82,11 @@
          <property name="text">
           <string>Cancel</string>
          </property>
+         <property name="autoDefault">
+          <bool>false</bool>
+         </property>
          <property name="default">
-          <bool>true</bool>
+          <bool>false</bool>
          </property>
         </widget>
        </item>
