implemented center engrave

--- a/src/gui/CtrlCut.ui
+++ b/src/gui/CtrlCut.ui
@@ -139,9 +139,19 @@
     <number>2</number>
    </attribute>
    <widget class="ObjectPropertyWidget" name="objectProperties">
-    <layout class="QVBoxLayout" name="verticalLayout_2">
+    <layout class="QVBoxLayout" name="verticalLayout">
      <item>
       <layout class="QGridLayout" name="gridLayout_2">
+       <item row="1" column="1">
+        <widget class="QCheckBox" name="autofocusBox">
+         <property name="text">
+          <string>Autofocus</string>
+         </property>
+         <property name="checked">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
        <item row="0" column="0">
         <widget class="QLabel" name="titleLabel">
          <property name="text">
@@ -152,13 +162,50 @@
        <item row="0" column="1">
         <widget class="QLineEdit" name="titleEdit"/>
        </item>
-       <item row="1" column="1">
-        <widget class="QCheckBox" name="autofocusBox">
-         <property name="text">
-          <string>Autofocus</string>
+       <item row="3" column="1">
+        <widget class="QComboBox" name="center">
+         <property name="sizeAdjustPolicy">
+          <enum>QComboBox::AdjustToContentsOnFirstShow</enum>
          </property>
-         <property name="checked">
+         <property name="frame">
           <bool>true</bool>
+         </property>
+         <item>
+          <property name="text">
+           <string>None</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Center</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Left</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Right</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Top</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Bottom</string>
+          </property>
+         </item>
+        </widget>
+       </item>
+       <item row="3" column="0">
+        <widget class="QLabel" name="centerLabel">
+         <property name="text">
+          <string>Center Engrave</string>
          </property>
         </widget>
        </item>
